hphp/test/zend/good/Zend/tests/bug43344_8.php.expectf

Fatal error: Undefined constant 'Foo\bar' in %s/bug43344_8.php on line 3
